Updating spacing on page to fit more names

--- a/src/webfiles/index.html
+++ b/src/webfiles/index.html
@@ -201,7 +201,7 @@
             <li id="description">
                 <p>Make sure to select the <b>"Registrant List By Activity/Class"</b> report in Doubleknot</p>
                 <p>If the PDF is empty or shows old data, try refreshing the page</p>
-                <p>View the most recently generated file <a href="ncr">here.</a></p>
+                <p>View the most recently generated file <a href="/paperwork/ncr">here.</a></p>
                 <form ref='uploadForm' id='uploadForm' action='' method='post' encType="multipart/form-data">
                     <input type="file" name="ncr"/>
                     <input type='submit' value='Upload!'/>
